[package]
name = "c00lmx"
version = "0.1.0"
authors = ["bodqhrohro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
imageproc = "0.23.0"
rusttype = "0.9.2"
encoding = "0.2"
rand = "0.8.5"
arguments = "0.6.2"
